--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
   </div>
 
- <script type="module"
+ <script type="module">
 const { createWorker } = Tesseract;
       const worker = await createWorker("eng", 1, {
         workerPath: "https://unpkg.com/browse/tesseract.js@6.0.0/dist/worker.min.js",
