--- a/index.html
+++ b/index.html
@@ -1,69 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Analyzer</title>
-    <style>
-        .hidden { display: none; }
-        .upload-section { margin: 20px; }
-        button { padding: 10px 20px; cursor: pointer; }
-        table { border-collapse: collapse; margin: 20px; }
-        td, th { border: 1px solid #ddd; padding: 8px; }
-        .status { margin: 10px; color: #666; }
-    </style>
-    <script src='https://unpkg.com/tesseract.js@v6.0.0/dist/tesseract.min.js'></script>
-</head>
-<body>
-    <div class="upload-section">
-        <input type="file" id="fileInput" multiple accept="image/png" hidden>
-        <button onclick="document.getElementById('fileInput').click()">Choose PNG files</button>
-        <button onclick="analyzeFiles()" id="analyzeBtn">Analyze deck</button>
-        <div id="status" class="status"></div>
+<html>
+  <head>
+    <script src="https://unpkg.com/browse/tesseract.js@6.0.0/dist/tesseract.min.js"></script>
+  </head>
+  <body>
+    <div>
+      <input type="file" id="uploader">
+      <button id="download-pdf" disabled="true">Download PDF</button>
     </div>
-    
-    <div id="resultsSection" class="hidden">
-        <button onclick="exportToCSV()">Download CSV</button>
-        <table id="resultsTable">
-            <thead>
-                <tr>
-                    <th>fileName</th>
-                    <th>createdDate</th>
-                    <th>result</th>
-                    <th>turns</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-    </div>
-
-<input type="file" id="uploader">
-
-  <div class="row">
-    <div class="column">
-      <p>Input Image</p>
-      <img id="imgInput" style="max-width:500px;">
-    </div>
-    <div class="column">
-      <p>Rotated, Original Color</p>
-      <img id="imgOriginal" style="max-width:500px;">
-    </div>
-    <div class="column">
-      <p>Rotated, Grey</p>
-      <img id="imgGrey" style="max-width:500px;">
-    </div>
-    <div class="column">
-      <p>Rotated, Binary</p>
-      <img id="imgBinary" style="max-width:500px;">
-    </div>
-  </div>
-
- <script type="module">
-const { createWorker } = Tesseract;
+    <textarea id="board" readonly rows="8" cols="80">Upload an image file</textarea>
+    <script type="module">
+      const { createWorker } = Tesseract;
       const worker = await createWorker("eng", 1, {
+        // corePath: '/node_modules/tesseract.js-core',
         workerPath: "https://unpkg.com/browse/tesseract.js@6.0.0/dist/worker.min.js",
-        logger: m => console.log(m)
+        logger: m => console.log(m),
       });
-</script>
-</body>
+      const uploader = document.getElementById('uploader');
+      const dlBtn = document.getElementById('download-pdf');
+      let pdf;
+      const recognize = async ({ target: { files }  }) => {
+        const res = await worker.recognize(files[0],{pdfTitle: "Example PDF"},{pdf: true});
+        pdf = res.data.pdf;
+        const text = res.data.text;
+        const board = document.getElementById('board');
+        board.value = text;
+        dlBtn.disabled = false;
+      };
+      const downloadPDF = async () => {
+        const filename = 'tesseract-ocr-result.pdf';
+        const blob = new Blob([new Uint8Array(pdf)], { type: 'application/pdf' });
+        if (navigator.msSaveBlob) {
+          // IE 10+
+          navigator.msSaveBlob(blob, filename);
+        } else {
+          const link = document.createElement('a');
+          if (link.download !== undefined) {
+            const url = URL.createObjectURL(blob);
+            link.setAttribute('href', url);
+            link.setAttribute('download', filename);
+            link.style.visibility = 'hidden';
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+          }
+        }
+      };
+      uploader.addEventListener('change', recognize);
+      dlBtn.addEventListener('click', downloadPDF);
+    </script>
+  </body>
 </html>
