--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
 <html>
-  <head>
-    <script src="https://unpkg.com/browse/tesseract.js@6.0.0/dist/tesseract.min.js"></script>
-  </head>
-  <body>
-    <div>
-      <input type="file" id="uploader">
-      <button id="download-pdf" disabled="true">Download PDF</button>
+
+<head>
+  <script src="https://unpkg.com/browse/tesseract.js@6.0.0/dist/tesseract.min.js"></script>
+  <style>
+    .column {
+  float: left;
+  width: 20%;
+  padding: 5px;
+}
+
+  </style>
+</head>
+
+<body>
+  <input type="file" id="uploader">
+
+  <div class="row">
+    <div class="column">
+      <p>Input Image</p>
+      <img id="imgInput" style="max-width:500px;">
     </div>
-    <textarea id="board" readonly rows="8" cols="80">Upload an image file</textarea>
-    <script type="module">
-      const { createWorker } = Tesseract;
-      const worker = await createWorker("eng", 1, {
-        // corePath: '/node_modules/tesseract.js-core',
-        workerPath: "https://unpkg.com/browse/tesseract.js@6.0.0/dist/worker.min.js",
-        logger: m => console.log(m),
+    <div class="column">
+      <p>Rotated, Original Color</p>
+      <img id="imgOriginal" style="max-width:500px;">
+    </div>
+    <div class="column">
+      <p>Rotated, Grey</p>
+      <img id="imgGrey" style="max-width:500px;">
+    </div>
+    <div class="column">
+      <p>Rotated, Binary</p>
+      <img id="imgBinary" style="max-width:500px;">
+    </div>
+  </div>
+
+  <script>
+    const recognize = async ({ target: { files } }) => {
+      document.getElementById("imgInput").src = URL.createObjectURL(files[0]);
+      const worker = await Tesseract.createWorker("eng", 1, {
+        // corePath: '/tesseract-core-simd.wasm.js',
+        workerPath: "https://unpkg.com/browse/tesseract.js@6.0.0/dist/worker.min.js"
       });
-      const uploader = document.getElementById('uploader');
-      const dlBtn = document.getElementById('download-pdf');
-      let pdf;
-      const recognize = async ({ target: { files }  }) => {
-        const res = await worker.recognize(files[0],{pdfTitle: "Example PDF"},{pdf: true});
-        pdf = res.data.pdf;
-        const text = res.data.text;
-        const board = document.getElementById('board');
-        board.value = text;
-        dlBtn.disabled = false;
-      };
-      const downloadPDF = async () => {
-        const filename = 'tesseract-ocr-result.pdf';
-        const blob = new Blob([new Uint8Array(pdf)], { type: 'application/pdf' });
-        if (navigator.msSaveBlob) {
-          // IE 10+
-          navigator.msSaveBlob(blob, filename);
-        } else {
-          const link = document.createElement('a');
-          if (link.download !== undefined) {
-            const url = URL.createObjectURL(blob);
-            link.setAttribute('href', url);
-            link.setAttribute('download', filename);
-            link.style.visibility = 'hidden';
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-          }
-        }
-      };
-      uploader.addEventListener('change', recognize);
-      dlBtn.addEventListener('click', downloadPDF);
-    </script>
-  </body>
+      const ret = await worker.recognize(files[0], {rotateAuto: true}, {imageColor: true, imageGrey: true, imageBinary: true});
+      document.getElementById("imgOriginal").src = ret.data.imageColor;
+      document.getElementById("imgGrey").src = ret.data.imageGrey;
+      document.getElementById("imgBinary").src = ret.data.imageBinary;
+
+    }
+    const elm = document.getElementById('uploader');
+    elm.addEventListener('change', recognize);
+  </script>
+</body>
+
 </html>
