--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <script src="https://unpkg.com/browse/tesseract.js@6.0.0/dist/tesseract.min.js"></script>
+  <script src="https://unpkg.com/browse/tesseract.js@6.0.0/dist/tesseract.esm.min.js"></script>
   <style>
     .column {
   float: left;
